[gd_scene load_steps=27 format=1]

[ext_resource path="res://game/player_factory.gd" type="Script" id=1]
[ext_resource path="res://assets/players/shield.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/player_shoot1.wav" type="Sample" id=3]
[ext_resource path="res://assets/sounds/player_shoot2.wav" type="Sample" id=4]
[ext_resource path="res://assets/sounds/player_shoot3.wav" type="Sample" id=5]
[ext_resource path="res://game/player.gd" type="Script" id=6]
[ext_resource path="res://assets/players/player_light.png" type="Texture" id=7]
[ext_resource path="res://assets/players/player_medium.png" type="Texture" id=8]
[ext_resource path="res://assets/players/player_heavy.png" type="Texture" id=9]

[sub_resource type="SampleLibrary" id=1]

samples/player_shoot1 = {
"db": -5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}
samples/player_shoot2 = {
"db": -5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/player_shoot3 = {
"db": -5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 35.9958, 16.2608, 35.9958, 21.4675, 16.7467, 20.9942, 7.27994, -16.715 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -16.8603, 21.4675, -36.2671, 21.7831, -36.2671, 15.7875, -7.55132, -17.9773, 7.27994, -16.715 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -3.1335, -27.2862, 2.54655, -27.2862, 7.27994, -16.715, -7.55132, -17.9773 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( -16.8603, 21.4675, 7.27994, -16.715, 16.7467, 20.9942, 9.64662, 28.0943, -10.2336, 28.0943 )

[sub_resource type="ColorRamp" id=6]

offsets = FloatArray( 0, 0.490132, 1 )
colors = ColorArray( 0.347672, 0.425794, 0.847656, 0.784314, 0.886719, 0.610702, 0.180115, 0.890028, 0.195312, 0.135803, 0.135803, 1 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( -12.9786, 22.5601, -28.0145, 25.7729, -41.8938, 3.79729, -8.86618, -13.2948, 8.8685, -12.7808 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( 8.8685, -12.7808, 41.5106, 3.9258, 28.4023, 25.7729, 12.2098, 22.4316 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( -8.86618, -13.2948, -2.56909, -27.5597, 2.31439, -27.5597, 8.8685, -12.7808 )

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( -9.1232, 27.9576, -12.9786, 22.5601, 8.8685, -12.7808, 12.2098, 22.4316, 9.12552, 27.9576 )

[sub_resource type="ColorRamp" id=11]

offsets = FloatArray( 0, 0.490132, 1 )
colors = ColorArray( 0.351578, 0.847656, 0.347672, 0.784314, 0.886719, 0.610702, 0.180115, 0.890028, 0.195312, 0.135803, 0.135803, 1 )

[sub_resource type="ConvexPolygonShape2D" id=12]

custom_solver_bias = 0.0
points = Vector2Array( -31.192, 15.7951, -34.2076, 18.3467, -36.7592, -4.38577, -33.2797, -4.50175, -26.9007, 1.52933 )

[sub_resource type="ConvexPolygonShape2D" id=13]

custom_solver_bias = 0.0
points = Vector2Array( 33.0621, -4.50175, 36.5416, -4.50175, 34.5699, 18.6947, 30.7425, 16.0271, 26.915, 1.18138 )

[sub_resource type="ConvexPolygonShape2D" id=14]

custom_solver_bias = 0.0
points = Vector2Array( 9.6337, 20.5504, -9.96732, 20.3184, -31.192, 15.7951, -26.9007, 1.52933, -8.45953, -9.373, 9.16977, -9.02505, 26.915, 1.18138, 30.7425, 16.0271 )

[sub_resource type="ConvexPolygonShape2D" id=15]

custom_solver_bias = 0.0
points = Vector2Array( -8.45953, -9.373, -5.67596, -27.6982, 5.80627, -27.6982, 9.16977, -9.02505 )

[sub_resource type="ConvexPolygonShape2D" id=16]

custom_solver_bias = 0.0
points = Vector2Array( -5.79193, 27.8573, -9.96732, 20.3184, 9.6337, 20.5504, 5.57431, 27.8573 )

[sub_resource type="ColorRamp" id=17]

offsets = FloatArray( 0, 0.490132, 1 )
colors = ColorArray( 0.847656, 0.347672, 0.417982, 0.784314, 0.886719, 0.610702, 0.180115, 0.890028, 0.195312, 0.135803, 0.135803, 1 )

[node name="player_factory" type="Node"]

script/script = ExtResource( 1 )

[node name="common" type="Node" parent="."]

[node name="shield" type="Sprite" parent="common"]

visibility/opacity = 0.0
transform/scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="bullet_container" type="Node" parent="common"]

[node name="sample_player" type="SamplePlayer" parent="common"]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="tween" type="Tween" parent="common"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="shield_regenerator" type="Timer" parent="common"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="players" type="Node" parent="."]

[node name="light" type="Area2D" parent="players"]

transform/pos = Vector2( 96, 96 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 4 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 5 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 6 )
rotation_speed = 3.5
friction = 0.25
forward_thrust = 600
reverse_thrust = 200
max_velocity = 500
health = 50

[node name="Sprite" type="Sprite" parent="players/light"]

transform/scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="players/light"]

build_mode = 0
polygon = Vector2Array( -3.1335, -27.2862, 2.54655, -27.2862, 7.27994, -16.715, 35.9958, 16.2608, 35.9958, 21.4675, 16.7467, 20.9942, 9.64662, 28.0943, -10.2336, 28.0943, -16.8603, 21.4675, -36.2671, 21.7831, -36.2671, 15.7875, -7.55132, -17.9773 )
shape_range = Vector2( 0, 3 )
trigger = false

[node name="muzzle" type="Position2D" parent="players/light"]

transform/pos = Vector2( 0, -50 )

[node name="thrust_particles" type="Particles2D" parent="players/light"]

transform/pos = Vector2( 0, 34 )
config/amount = 50
config/lifetime = 1.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 2, 2 )
config/local_space = false
params/direction = 0.0
params/spread = 20.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.46167, 0.630608, 0.953125, 0.784314 )
color/color_ramp = SubResource( 6 )

[node name="gun_timer" type="Timer" parent="players/light"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="medium" type="Area2D" parent="players"]

transform/pos = Vector2( 256, 96 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 8 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 9 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 10 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
rotation_speed = 2.5
friction = 0.4
forward_thrust = 500
reverse_thrust = 150
max_velocity = 400
health = 75

[node name="Sprite" type="Sprite" parent="players/medium"]

transform/scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="players/medium"]

build_mode = 0
polygon = Vector2Array( -2.56909, -27.5597, 2.31439, -27.5597, 8.8685, -12.7808, 41.5106, 3.9258, 28.4023, 25.7729, 12.2098, 22.4316, 9.12552, 27.9576, -9.1232, 27.9576, -12.9786, 22.5601, -28.0145, 25.7729, -41.8938, 3.79729, -8.86618, -13.2948 )
shape_range = Vector2( 0, 3 )
trigger = false

[node name="muzzle" type="Position2D" parent="players/medium"]

transform/pos = Vector2( 0, -50 )

[node name="thrust_particles" type="Particles2D" parent="players/medium"]

transform/pos = Vector2( 0, 34 )
config/amount = 50
config/lifetime = 1.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 2, 2 )
config/local_space = false
params/direction = 0.0
params/spread = 20.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.46167, 0.630608, 0.953125, 0.784314 )
color/color_ramp = SubResource( 11 )

[node name="gun_timer" type="Timer" parent="players/medium"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="heavy" type="Area2D" parent="players"]

transform/pos = Vector2( 416, 96 )
input/pickable = true
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 13 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 14 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 15 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 16 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
rotation_speed = 1.5
friction = 0.8
forward_thrust = 400
reverse_thrust = 50
max_velocity = 300
health = 100

[node name="Sprite" type="Sprite" parent="players/heavy"]

transform/scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="players/heavy"]

build_mode = 0
polygon = Vector2Array( -5.67596, -27.6982, 5.80627, -27.6982, 9.16977, -9.02505, 26.915, 1.18138, 33.0621, -4.50175, 36.5416, -4.50175, 34.5699, 18.6947, 30.7425, 16.0271, 9.6337, 20.5504, 5.57431, 27.8573, -5.79193, 27.8573, -9.96732, 20.3184, -31.192, 15.7951, -34.2076, 18.3467, -36.7592, -4.38577, -33.2797, -4.50175, -26.9007, 1.52933, -8.45953, -9.373 )
shape_range = Vector2( 0, 4 )
trigger = false

[node name="muzzle" type="Position2D" parent="players/heavy"]

transform/pos = Vector2( 0, -50 )

[node name="thrust_particles" type="Particles2D" parent="players/heavy"]

transform/pos = Vector2( 0, 34 )
config/amount = 50
config/lifetime = 1.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 2, 2 )
config/local_space = false
params/direction = 0.0
params/spread = 20.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.46167, 0.630608, 0.953125, 0.784314 )
color/color_ramp = SubResource( 17 )

[node name="gun_timer" type="Timer" parent="players/heavy"]

process_mode = 1
wait_time = 0.6
one_shot = true
autostart = false


